--- a/examples/css3d_periodictable.html
+++ b/examples/css3d_periodictable.html
@@ -11,7 +11,7 @@
 			}
 
 			#menu {
-				position: absolute;
+				position: aaabsolute;
 				bottom: 20px;
 				width: 100%;
 				text-align: center;
