--- a/examples/css3d_periodictable.html
+++ b/examples/css3d_periodictable.html
@@ -135,7 +135,7 @@
 				"HASAN", "22", "M", 15, 4,
 				"SEAN", "23", "M", 16, 4,
 				"TAY", "34", "M", 17, 4,
-				"CELINE", "23", "M", 18, 4,
+				"CELINE", "23", "F", 18, 4,
 				"NG", "22", "F", 1, 5,
 				"WERN", "23", "F", 2, 5,
 				"YI", "22", "F", 3, 5,
